# songPlayer

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  addalbum.c  adjust.c  aligner.c  base.sql  best.c  best.py  compressids.sql  config.c  configure.ac  connectionstrength.sql  current.c  current.glade.xml  dependency-following.txt  derp.sql  derpstring.c  derpstring.h  done.c  dscanner.c  durationscan.c  enqueue.c  enqueuePath.c  findRecording.sql  get_pid.c  get_pid.h  graph.c  hash.c  hash.h  import.c  ipc.c  ipc.h  linktolatest.c  lx.mk  lxpause.c  lxpause.so.c  main.c  (+60 more)
broke/: rate.c
fixes/: closetimes.sql
keyring/: private.key  public.key
make/: Makefile.prefix.am  collect-deps.lua  deps.mk  implicit.mk  makeMakefile.am.py  makearray.lua  maybe-reconfig  smart-link.py
sql/: connections.sql  currentSongwasPlayed.sql  eval.sql  findRecording.sql  findfile.sql  pids.sql  plays.sql  rating.sql  reversedoublereacharoundupsert.sql  songplayed.sql  songs-with-tags.psql  testexecute.sql  timeconnectionthing.sql
src/: Makefile.am  adjust.c  adjust.h  config.c  config.h  current.c  dscanner.c  enqueuePath.c  get_pid.c  get_pid.h  hash.h  import.c  lxpause.so.c  move_location.c  next.c  nextreactor.c  pause.c  player.c  player.h  pq.c  pq.h  preparation.c  preparation.h  queue.c  queue.h  ratebytitle.c  rating.c  rating.h  replay.c  replay.h  select.c  select.h  semops.h  settitle.h  signals.c  synchronize.c  urlcodec.h
src/main/: addalbum.c  best.c  current.c  done.c  dscanner.c  enqueue.c  enqueuePath.c  graph.c  import.c  migrate.c  mode.c  move_location.c  next.c  nowplaying.c  pause.c  player.c  playlist.c  ratebyalbum.c  ratebytitle.c  remote_control.c  replay.c  replaygain_scanner.c  scanner.c  testadjust.c  testqueue.c
